styles/styles.css
/*
 * Copyright 2020 Adobe. All rights reserved.
 * This file is licensed to you under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License. You may obtain a copy
 * of the License at http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under
 * the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
 * OF ANY KIND, either express or implied. See the License for the specific language
 * governing permissions and limitations under the License.
 */

 :root {
  /* colors */
  --link-color: #004dff;
  --secondary-link-color: #004dff;
  --link-hover-color: #008;
  --background-color: #fff;
  --overlay-background-color: #eee;
  --highlight-background-color: #a7a7a7;
  --footer-background-color: black;
  --text-color: #000;
  --secondary-text-color: #a7a7a7;

  /* fonts */
  --body-font-family: 'Graphik Regular', 'Open Sans', sans-serif;
  --heading-font-family: 'Graphik Black', 'Open Sans', sans-serif;
  --subheading-font-family: 'Graphik Bold', 'Open Sans', sans-serif;
  --header-font-family-regular: 'Graphik Regular', arial, sans-serif;
  --header-font-family: 'Graphik', arial, sans-serif;
  --graphik-semibold: 'Graphik Semibold', 'Open Sans', sans-serif;
  --icomoon: icomoon, menlo, consolas, 'Liberation Mono', monospace;
  --ionicons: ionicons, menlo, consolas, 'Liberation Mono', monospace;
  --fixed-font-family: menlo, consolas, 'Liberation Mono', monospace;

  /* body sizes */
  --body-font-size-default: 1rem;
  --body-font-size-m: 22px;
  --body-font-size-s: 18px;
  --body-font-size-xs: 16px;
  --body-font-size-xxs: 14px;
  --body-font-size-xxxs: 11px;

  /* heading sizes */
  --heading-font-size-xxl: 48px;
  --heading-font-size-xl: 40px;
  --heading-font-size-l: 32px;
  --heading-font-size-m: 24px;
  --heading-font-size-s: 20px;
  --heading-font-size-xs: 18px;

  /* nav height */
  --nav-height: 50px;

}

@media (min-width: 900px) {
  :root {
    --heading-font-size-xxl: 65px;
    --heading-font-size-xl: 48px;
    --heading-font-size-l: 36px;
    --heading-font-size-m: 30px;
    --heading-font-size-s: 24px;
    --heading-font-size-xs: 22px;
  }
}

@media (min-width: 1000px) {
  :root {
    --nav-height: 69px;
  }
}

body {
  font-size: var(--body-font-size-default);
  margin: 0;
  font-family: var(--body-font-family);
  line-height: 1.6em;
  color: var(--text-color);
  background-color: var(--background-color);
  display: none;
}

body.appear {
  display: unset;
}

header {
  height: var(--nav-height);
}

h1, h2, h3,
h4, h5, h6 {
  font-family: var(--heading-font-family);
  font-weight: 600;
  line-height: 1.25;
  margin-top: 1em;
  margin-bottom: .5em;
  scroll-margin: calc(var(--nav-height) + 1em);
}

h1 { 
  font-size: var(--heading-font-size-xxl);
  font-weight: 900;
}

h2 { 
  font-size: var(--heading-font-size-l); 
  font-family: var(--subheading-font-family);
}

h3 { font-size: var(--heading-font-size-l) }
h4 { font-size: var(--heading-font-size-m) }
h5 { font-size: var(--heading-font-size-s) }
h6 { font-size: var(--heading-font-size-xs) }

p, dl, ol, ul, pre, blockquote {
  margin-top: 1em;
  margin-bottom: 1em;
}

hr {
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  border: 0;
  border-bottom: 1px solid var(--overlay-background-color);
}

code, pre, samp {
  font-family: var(--fixed-font-family);
  font-size: var(--body-font-size-s);
}

code, samp {
  padding: .125em;
}

pre {
  overflow: scroll;
}

main pre {
  background-color: var(--overlay-background-color);
  padding: 1em;
  border-radius: .25em;
  overflow-x: auto;
  white-space: pre;
}

a:any-link {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  color: var(--link-hover-color);
  text-decoration: none;
}

/* buttons */
a.button:any-link, button {
  font-family: var(--subheading-font-family);
  text-transform: uppercase;
  font-size: var(--body-font-size-xs);
  font-weight: 600;
  color: var(--link-color);
  text-decoration: none;

  /* font-family: var(--body-font-family);
  display: inline-block;
  box-sizing: border-box;
  text-decoration: none;
  border: 2px solid transparent;
  padding: 5px 30px;
  text-align: center;
  font-style: normal;
  font-weight: 600;
  cursor: pointer;
  color: var(--background-color);
  background-color: var(--link-color);
  margin: 16px 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-radius: 30px; */
}

a.button:hover, a.button:focus, button:hover, button:focus  {
  color: var(--link-hover-color);

  /* background-color: var(--link-hover-color); */
  cursor: pointer;
}

/* button:disabled, button:disabled:hover {
  background-color: var(--overlay-background-color);
  cursor: unset;
} */

a.button.secondary, button.secondary {
  /* background-color: unset; */
  
  /* border: 2px solid currentcolor; */
  color: var(--secondary-link-color);
}

main input {
  font-size: 1.25rem;
  width: 100%;
  max-width: 50rem;
  display: block;
  margin-bottom: 1rem;
  padding: 0.75rem 0.6rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  border: 1px solid var(--text-color);
  color: var(--text-color);
  background-color: var(--background-color);
}

main input:hover {
  border: 1px solid var(--text-color);
}

main blockquote {
  font-style: italic;
  margin: 3rem;
  text-indent: -1rem;
  hanging-punctuation: first;
}

main blockquote p::before {
  content: "“";
  line-height: 0;
}

main blockquote p::after {
  content: "”";
  line-height: 0;
}

main img {
  max-width: 100%;
  width: auto;
  height: auto;
}

.icon {
  display: inline-block;
  height: 24px;
  width: 24px;
}

.icon svg {
  height: 100%;
  width: 100%;
}

main .section {
  padding: 64px 16px;
}

body.article main .section.abstract {
  padding-bottom: 0;
  padding-top: 0;
}

body.article main .section.abstract + .section {
  padding-top: 0;
}

body.article main .section.abstract p.date {
  font-family: var(--graphik-semibold);
  font-size: 12px;
  font-weight: 600;
  line-height: 1.33;
  color: #000;
  padding-bottom: 9px;
  text-transform: uppercase;
  margin: 0;
}

body.article main .section.abstract h1 {
  text-align: center;
  font-family: var(--header-font-family-regular);
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.6em;
  margin: 0;
}

@media (min-width: 600px) {
  main .section {
    padding: 64px 32px;
  }
}

@media (min-width: 900px) {
  .section > div {
    max-width: 1200px;
    margin: auto;
  }

  body.article main {
    max-width: 1200px;
    margin: auto;
    position: relative;
  }

  body.article main .section:not(.aside-container) {
    max-width: 60%;    
  }

  body.article main .section.aside-container {
    position: absolute;
    top: 160px;
    right: 5%;
    padding-top: 0;
    max-width: 25%;
  }
}


@media (min-width: 1200px) {
  body.article main .section:not(.aside-container) {
    max-width: 800px;    
  }

  body.article main .section.aside-container {
    position: absolute;
    top: 160px;
    right: 0;
    padding-top: 0;
    max-width: 350px;
  }
}

/* section metadata */
main .section.highlight {
  background-color: var(--highlight-background-color);
}

/* Filter Year styles */
#filter-year {
  display: none;
  width: 110px;
  box-sizing: border-box;
  padding-top: 5px;
  padding-left: 15px;
  padding-right: 10px;
  text-transform: uppercase;
  font-family: var(--graphik-semibold);
  font-size: var(--body-font-size-s);
  font-weight: 600;
  color: #000;
  line-height: 40px;
  height: 50px;
  border: 1px solid #979797;
  border-radius: 0;
  position: relative;
  margin-left: 5px;
}

#filter-year::after {
  content: "";
  vertical-align: middle;
  border-top: 4px dashed;
  border-top: 4px solid;
  border-right: 4px solid transparent;
  border-left: 4px solid transparent;
  width: 0;
  height: 0;
  font-style: normal;
  font-weight: 400;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  margin: 0;
  text-decoration: none;
  float: right;
  margin-top: 18px;
}

#filter-year .filter-year-dropdown {
  display: none;
}

#filter-year .filter-year-dropdown[aria-expanded='true'] {
  position: absolute;
  width: 100%;
  max-height: 300px;
  padding: 10px;
  display: block;
  z-index: 10;
  background-color: var(--background-color);
  left: 0;
  top: 50px;
  margin: 2px 0 0;
  font-size: var(--body-font-size-xxs);
  text-align: left;
  border: 1px solid rgb(0 0 0 / 15%);
  border-radius: 4px;
  box-sizing: border-box;
  overflow-x: scroll;
}

#filter-year .filter-year-dropdown[aria-expanded='true'] .filter-year-item {
  cursor: pointer;
  padding-top: 5px;
  text-transform: uppercase;
  font-family: var(--graphik-semibold);
  font-size: var(--body-font-size-s);
  font-weight: 600;
  color: #000;
  height: 52px;
}

@media (min-width: 768px) {
  #filter-year {
    display: block;
    width: 194px;
    margin: 0 auto;
  }
}

@media (min-width: 1000px) {
  #filter-year {
    width: 370px;
  }
}

